# game-request-generator

./: README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/models/: account.rs  game.rs  level.rs  mod.rs  progress.rs  purchase_event.rs
src-tauri/src/services/: account_service.rs  game_service.rs  level_service.rs  mod.rs  progress_service.rs  purchase_event_service.rs
src/components/: CompletedTasksSidebar.tsx
src/constants/: index.ts
src/contexts/: LanguageContext.tsx  SettingsContext.tsx  ThemeContext.tsx
src/hooks/: useAccounts.ts  useDailyTasks.ts  useGames.ts  useLevels.ts  useProgress.ts  usePurchaseEvents.ts
src/lib/: constants.ts
src/pages/: AccountDetail.tsx  AccountFormPage.tsx  Accounts.tsx  AccountsDetail.tsx  Dashboard.tsx  Events.tsx  GameDetail.tsx  Games.tsx  Levels.tsx  PurchaseEventDetail.tsx  PurchaseEvents.tsx  Requests.tsx  SettingsPage.tsx
src/services/: account.service.ts  api.service.ts  base-api.service.ts  excel.service.ts  game.service.ts  level.service.ts  purchase-event.service.ts  request.service.ts  storage.service.ts  tauri.service.ts
src/types/: account.types.ts  daily-tasks.types.ts  dailyRequest.types.ts  event.types.ts  game.types.ts  index.ts  level.types.ts  progress.types.ts  purchaseEvent.types.ts  request.types.ts  xlsx-js-style.d.ts
src/utils/: daily-tasks.utils.ts  errorHandling.ts  notifications.ts  taskCompletion.ts  (+3 more)
(+71 files in other folders)
